feat(pulseflow): Rename project from astroflow to pulseflow and update related configurations
- Renamed the project from `astroflow` to `pulseflow` in `pyproject.toml` and GitHub workflows.
- Updated the project description to reflect the new focus on radio astronomy single pulse detection.
- Changed the license from MIT to BSD and updated the author information.
- Modified the `TaskConfig` class to support model path configuration for YOLO-based detection.
- Updated file path handling to remove unnecessary `.lower()` calls for consistency.
- Removed the synthetic dataset generator documentation as it is no longer relevant.
- Added a placeholder for the YOLO model path in the `TaskConfig` class.
- Updated the `Yolo11nFrbDetector` class to use the new `modelpath` property

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,8 @@ name: release
 
 on:
   push:
-    # tags: ['v*'] 
-    branches: ['enhded']         
+    tags: ['v*'] 
+    # branches: ['enhded']         
   workflow_dispatch:      
 
 jobs:
@@ -71,7 +71,7 @@ jobs:
     runs-on: ubuntu-22.04
     environment:
       name: testpypi
-      url: https://test.pypi.org/p/astroflow
+      url: https://test.pypi.org/p/pulseflow
     permissions:
       id-token: write
       contents: read
@@ -94,20 +94,20 @@ jobs:
       #     skip-existing: true
 
 
-  # publish-pypi:
-  #   needs: [build-linux, publish-testpypi]  # 不想先发 TestPyPI 就写 needs: build-linux
-  #   runs-on: ubuntu-22.04
-  #   environment:
-  #     name: pypi
-  #     url: https://pypi.org/p/<你的包名>
-  #   permissions:
-  #     id-token: write
-  #     contents: read
-  #   steps:
-  #     - uses: actions/download-artifact@v4
-  #       with: { name: dists, path: dist }
-  #     - name: Upload to PyPI (OIDC)
-  #       uses: pypa/gh-action-pypi-publish@release/v1
-  #       with:
-  #         packages-dir: dist
-  #         skip-existing: false
+  publish-pypi:
+    needs: [build-linux, publish-testpypi]
+    runs-on: ubuntu-22.04
+    environment:
+      name: pypi
+      url: https://pypi.org/p/pulseflow
+    permissions:
+      id-token: write
+      contents: read
+    steps:
+      - uses: actions/download-artifact@v4
+        with: { name: dists, path: dist }
+      - name: Upload to PyPI (OIDC)
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          packages-dir: dist
+          skip-existing: false
