feat(rfimask): Add advanced RFI masking with frequency reversal support
- Introduced new `astrorfimask` command for batch RFI masking
- Implemented Savitzky-Golay and Spectral Kurtosis algorithms
- Added frequency reversal for descending order data
- Enhanced multiprocessing support for large datasets
- Improved error handling and progress tracking
- Updated documentation with detailed usage examples
- Added model download functionality for default weights
- Removed deprecated preprocess configuration

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ build-backend = "scikit_build_core.build"
 
 [project]
 name = "pulseflow"
-version = "0.1.0"
+version = "0.1.1"
 description = "High-performance radio astronomy single pulse Detect lib"
 requires-python = ">=3.10"
 readme = "README.md"
@@ -44,6 +44,7 @@ dev = ["pytest>=6.0", "pytest-cov", "black", "flake8"]
 
 [project.scripts]
 astroflow = "astroflow.cli:main"
+astrorfimask = "astroflow.rfimask:astrorfimask"
 
 [tool.setuptools]
 include-package-data = true
