--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,8 @@ build-backend = "scikit_build_core.build"
 
 [project]
 name = "pulseflow"
-version = "0.1.5"
-description = "High-performance radio astronomy single pulse Detect lib"
+version = "0.1.6"
+description = "High-performance radio astronomy single pulse search tools"
 requires-python = ">=3.10"
 readme = "README.md"
 license = { text = "BSD" }
@@ -30,9 +30,9 @@ dependencies = [
   "PyYAML==6.0.2",
   "scipy==1.16.1",
   "seaborn==0.13.2",
-  "sympy==1.13.1",
-  "torch==2.6.0",
-  "torchvision==0.21.0",
+  "sympy>=1.13.1",
+  "torch>=2.6.0",
+  "torchvision>=0.21.0",
   "tqdm==4.67.1",
   "typing_extensions==4.14.1",
   "ultralytics==8.3.167",
@@ -84,7 +84,7 @@ exclude = [
 ]
 
 [tool.cibuildwheel]
-build = ["cp310-*", "cp311-*", "cp312-*"]
+build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*"]
 archs = ["x86_64"]
 skip = ["*-musllinux_*", "pp*"]
 
@@ -94,7 +94,7 @@ repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"
 
 [tool.cibuildwheel.environment]
 CMAKE_BUILD_TYPE = "Release"
-CMAKE_CUDA_ARCHITECTURES = "75;80;86;89"
+CMAKE_CUDA_ARCHITECTURES = "61;70;75;80;86;89;"
 CUDAHOME = "/usr/local/cuda"
 CUDACXX = "/usr/local/cuda/bin/nvcc"
 NVCC_PREPEND_FLAGS = "--allow-unsupported-compiler"
