feat(specplot): Add baseline removal for spectrum and optimize plotting logic
- Add `specplot` script entry to support calling spectrum plotting from the command line.
- Add default configuration in `taskconfig.py`, use default config and issue a warning when the config file is missing.
- Add `_detrend_frequency` function in `plotter.py` to remove frequency bandpass baseline using Chebyshev polynomial fitting.
- Refactor `specplot.py`, optimize code structure, add downsampling and baseline removal, and include comparison plots of raw and detrended spectra.
- Add plotting of `bandpass_raw` and `bandpass_flat` to show bandpass changes before and after baseline removal.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ dev = ["pytest>=6.0", "pytest-cov", "black", "flake8"]
 [project.scripts]
 astroflow = "astroflow.cli:main"
 astrorfimask = "astroflow.rfimask:astrorfimask"
+specplot = "astroflow.specplot:main"
 
 [tool.setuptools]
 include-package-data = true
