--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ license = { text = "BSD" }
 authors = [{ name = "lintian233" }]
 
 dependencies = [
-  "astropy==7.0.1",
+  "astropy>=6.1.7",
   "loguru==0.7.3",
   "matplotlib==3.10.5",
   "numba==0.61.0",
@@ -28,7 +28,7 @@ dependencies = [
   "opencv_python==4.11.0.86",
   "pandas==2.3.1",
   "PyYAML==6.0.2",
-  "scipy==1.16.1",
+  "scipy>=1.15.3",
   "seaborn==0.13.2",
   "sympy>=1.13.1",
   "torch>=2.6.0",
