fix(core): enhance build compatibility and validation
- build: add `-allow-unsupported-compiler` to CUDA flags for better compatibility.
- cpp: add input validation for frequency range, DM, and foff in `dedisperse_spec_with_dm`.
- python: preserve full precision in `DmTime` attributes, moving rounding logic to `__str__`.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,7 +106,7 @@ set(CUDA_BASE_FLAGS
   "--expt-extended-lambda"
   "--default-stream per-thread"
 )
-set(CMAKE_CUDA_FLAGS "-Xcudafe --diag_suppress=esa_on_defaulted_function_ignored")
+set(CMAKE_CUDA_FLAGS "-allow-unsupported-compiler -Xcudafe --diag_suppress=esa_on_defaulted_function_ignored")
 set(CMAKE_CUDA_FLAGS_DEBUG "-O0 -g -G -lineinfo --ptxas-options=-v -Xcompiler=-O0 -Xcompiler=-g")
 
 string(REPLACE ";" " " CMAKE_CUDA_FLAGS_RELEASE
